--- a/copytraffici.conf
+++ b/copytraffici.conf
@@ -8,12 +8,18 @@ location = /earth {
 	 
 location = /lua {
 	content_by_lua '
-		local res1,res2 = ngx.location.capture_multi({ {"/moon"}, {"earth"} })
+		local res1,res2,arr
+		if ngx.var.request_method=="POST" then
+			arr={method=ngx.HTTP_POST,body=request_body}
+		else
+			arr={method=ngx.HTTP_GET}
+		end
+		local res1,res2 = ngx.location.capture_multi({ {"/moon",arr}, {"earth",arr} })
 		if res1.status == 200 then
 			ngx.print(res1.body)
 		end
 		ngx.print(",")
-		if res2.status == 200 then
+		if res2.status == 200 then   --ngx.HTTP_OK
 			ngx.print(res2.body)
 		end
 	';
